--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,10 +1,17 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 62.5%;
+  // box-sizing: inherit;
 }
 
 body {
   font-family: Helvetica, Arial, sans-serif;
   font-size: $m-size;
+  color: $dark-grey;
+  line-height: 1.6;
 }
 
 button {
